--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <title>威盒暂停维护公告</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/callout.css" rel="stylesheet">
 </head>
 
@@ -19,15 +19,32 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-2">
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">公告</a>
+                    </li>
+                    <hr>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">时间轴</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">图片</a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="col-md-10">
                 <div class="jumbotron">
-                  <hr class="my-4">
-                  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                    <hr class="my-4">
+                    <p>It uses utility classes for typography and spacing to space content out within the larger
+                        container.</p>
                 </div>
 
                 <div class="callout callout-info">
-                  <h4>Info Callout</h4>
-                  This is an info callout.
+                    <h4>Info Callout</h4>
+                    This is an info callout.
                 </div>
 
             </div>
@@ -40,8 +57,8 @@
             </ul>
         </footer>
     </div>
-    <script src="assets/js/jquery-3.3.1.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
