--- a/www/index.html
+++ b/www/index.html
@@ -8,34 +8,40 @@
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.8.0/css/all.min.css" rel="stylesheet">
+    
     <link href="assets/css/callout.css" rel="stylesheet">
 </head>
 
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="assets/img/vboxicon.png" alt="" width="72" height="72">
+            <img class="d-block mx-auto mb-4" src="assets/img/vboxicon.png" alt="" width="72" height="72"/>
             <h2>威盒暂停维护公告</h2>
         </div>
 
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-lg-2">
+                <div class="sticky-top" style="padding: 40px 0; white-space:nowrap;">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">公告</a>
+                        <a class="nav-link active" href="#"><i class="fas fa-scroll"></i> 公告</a>
                     </li>
                     <hr>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">时间轴</a>
+                        <a class="nav-link" href="#"><i class="fas fa-calendar-day"></i> 时间轴</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">图片</a>
+                        <a class="nav-link" href="#"><i class="fas fa-images"></i> 图片</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://store.vlabpro.com/about"><i class="fas fa-user-friends"></i> 关于我们 <sup><i class="fas fa-link"></i></sup></a>
+                    </li>                    
                 </ul>
-
+                </div>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-lg-10">
                 <div class="jumbotron">
                     <hr class="my-4">
                     <p>It uses utility classes for typography and spacing to space content out within the larger
@@ -53,7 +59,6 @@
         <footer class="my-5 pt-5 text-muted text-center text-small">
             <p class="mb-1">&copy; 2019 威盒团队</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://store.vlabpro.com/about">关于我们</a></li>
             </ul>
         </footer>
     </div>
