--- a/www/index.html
+++ b/www/index.html
@@ -25,14 +25,14 @@
                 <div class="sticky-top" style="padding: 40px 0; white-space:nowrap;">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-scroll"></i> 公告</a>
+                        <a class="nav-link active" id="nav-announcement" href="#announcement"><i class="fas fa-scroll"></i> 公告</a>
                     </li>
                     <hr>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-calendar-day"></i> 时间轴</a>
+                        <a class="nav-link" id="nav-timeline" href="#timeline"><i class="fas fa-calendar-day"></i> 时间轴</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-images"></i> 图片</a>
+                        <a class="nav-link" id="nav-images" href="#images"><i class="fas fa-images"></i> 图片</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://store.vlabpro.com/about"><i class="fas fa-user-friends"></i> 关于我们 <sup><i class="fas fa-link"></i></sup></a>
@@ -42,16 +42,116 @@
             </div>
 
             <div class="col-lg-10">
-                <div class="jumbotron">
-                    <hr class="my-4">
-                    <p>It uses utility classes for typography and spacing to space content out within the larger
-                        container.</p>
+                <div class="jumbotron" id="announcement">
+                    <p>
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                        It uses utility classes for typography and spacing to space content out within the larger container.
+                    </p>
                 </div>
 
-                <div class="callout callout-info">
-                    <h4>Info Callout</h4>
-                    This is an info callout.
+
+                <div class="jumbotron" id="timeline">
+                        <p>
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                        </p>
                 </div>
+                
+
+                <div class="jumbotron" id="images">
+                        <p>
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                            It uses utility classes for typography and spacing to space content out within the larger container.
+                        </p>
+                </div>
+
 
             </div>
         </div>
@@ -64,6 +164,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/waypoints@4.0.1/lib/jquery.waypoints.min.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
