--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,10 @@
 
                 <div id="timeline">
                     <ul class="timeline">
+                        <div class="timeline-first"> </div>
+
                         <!-- Item -->
+
                         <li>
                             <div class="direction-l">
                                 <div class="flag-wrapper">
@@ -253,6 +256,7 @@
                             </div>
                         </li>
 
+                        <div class="timeline-last"> </div>
                     </ul>
 
                 </div>
