Completed first version

--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,9 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.8.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/dist/css/lightgallery.min.css">
 
-    <link href="assets/css/timeline.css" rel="stylesheet">
+    <link href="assets/css/index.css" rel="stylesheet">
 </head>
 
 <body class="bg-light">
@@ -47,68 +48,21 @@
             <div class="col-lg-10">
                 <div class="jumbotron" id="announcement">
                     <p>
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
+                        致威盒的开发者和用户：<br>
+                        <br>
+                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                        这十年中我们发布了超过五十个版本，上架了过百款游戏，下载次数过万，注册用户已达数千人。这个成果对我们团队来说非常振奋与欣慰，团队中的每一员都度过了一段快乐又激情四溢的时间。同时我们也很高兴地看到有这么多开发者和用户在支持着我们，支持着我们这样一个业余的团队，帮助我们发展和成长。希望威盒也给你们带来了欢乐与便捷。<br>
+                        <br>
+                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                        但是由于国内政策收紧和开发团队学业繁忙等原因，我们非常痛心的宣布威盒暂缓更新。从即日起，除重大bug之外，威盒将停止发布修改、更新版本。虽然如此，威盒商店内的游戏以及威盒的云同步等功能仍然可以正常下载和使用。我们十分理解停止更新会给用户带来不便和烦恼。但请您理解，这对我们来说也是一个非常艰难的决定。威盒团队自2009年成立，团队的成员都为在校学生。威盒的开发和维护也全用成员的课余时间完成，我们无法强求、也更没有权力要求、更不应该认为成员们应该对威盒之事更为看重。近两年，团队成员都逐渐从学校毕业，走入社会。他们也有了自己作为成年人的义务和职责。我们能够用于威盒开发和运营的精力越来越少。长痛不如短痛，与其看着威盒的开发效率逐渐变低和更新速度减缓，我们不如就此停下脚步。虽然人们会成长，也总是会和不同的东西说再见，但是我们希望这一次的再见，带来的是下一次做的更好的软件。政策会变动，工作会变动，而永不变动的则是威盒团体热爱游戏、希望帮助中国游戏玩家和开发者的热心。<br>
+                        <br>
+                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                        我们可能不会频繁的查看论坛、QQ群等联系方式，如果你需要联系我们（BUG反馈，提供建议等等），可以发送邮件到 <b>main<code>@</code>vlabpro.com</b>。 便于我们及时得知，邮件会自动转发至我们主要成员的私人邮箱中。<br>
+                        <br>
+                        威盒团队<br>
+                        敬上<br>
+                        2019年4月<br>
+                        
                     </p>
                 </div>
 
@@ -263,70 +217,65 @@
 
 
                 <div class="jumbotron" id="images">
-                    <p>
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                        It uses utility classes for typography and spacing to space content out within the larger
-                        container.
-                    </p>
+                        <div class="callout callout-bdc">
+                            <h4>图标</h4>
+                        </div>
+
+                        <div class="row" id="images-logo">
+                            <tr>
+                                <div class="col-md-4 images-logo" data-src="assets/img/display/logo/logo0.png" data-sub-html="早期团队图标">
+                                    <img src="assets/img/display/logo/logo0.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 早期团队图标 </div>
+                                </div>
+                                <div class="col-md-4 images-logo" data-src="assets/img/display/logo/logo1.png" data-sub-html="威盒第一版图标">
+                                    <img src="assets/img/display/logo/logo1.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒第一版图标 </div>
+                                </div>
+                                <div class="col-md-4 images-logo" data-src="assets/img/display/logo/logo2.png" data-sub-html="威盒现在的图标">
+                                    <img src="assets/img/display/logo/logo2.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒现在的图标 </div>
+                                </div>
+                            </tr>
+                        </div>
+
+
+                        <div class="callout callout-bdc">
+                                <h4>客户端</h4>
+                        </div>
+    
+                        <div class="row" id="images-client">
+                            <tr>
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/0.png" data-sub-html="威盒 1.x">
+                                    <img src="assets/img/display/client/thumbnail/0.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒 1 </div>
+                                </div>
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/1.png" data-sub-html="威盒 2.x 内测">
+                                    <img src="assets/img/display/client/thumbnail/1.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒 2 内测 </div>
+                                </div>
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/2.png" data-sub-html="威盒 2.x 公测">
+                                    <img src="assets/img/display/client/thumbnail/2.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒 2 公测 </div>
+                                </div>
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/3.png" data-sub-html="威盒现在的图标">
+                                    <img src="assets/img/display/client/thumbnail/3.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒 2.0 </div>
+                                </div>
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/4.png" data-sub-html="威盒现在的图标">
+                                    <img src="assets/img/display/client/thumbnail/4.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒 2.0 for macOS </div>
+                                </div>
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/5.png" data-sub-html="威盒现在的图标">
+                                    <img src="assets/img/display/client/thumbnail/5.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒 当前界面 </div>
+                                </div>
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/6.png" data-sub-html="威盒现在的图标">
+                                    <img src="assets/img/display/client/thumbnail/6.png" class="img-thumbnail mx-auto d-block">
+                                    <div class="alert alert-light images-text"> 威盒 for macOS 当前界面 </div>
+                                </div>
+                            </tr>
+                        </div>
+
                 </div>
 
 
@@ -342,6 +291,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/waypoints@4.0.1/lib/jquery.waypoints.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/dist/js/lightgallery.min.js"></script>
     <script src="assets/js/index.js"></script>
 </body>
 
