--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 
         <div class="row">
             <div class="col-lg-2">
-                <div class="sticky-top" style="padding: 40px 0; white-space:nowrap;">
+                <div class="sticky-top">
                     <ul class="nav nav-pills flex-column">
                         <li class="nav-item">
                             <a class="nav-link active" id="nav-announcement" href="#announcement"><i
@@ -59,9 +59,11 @@
                         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                         我们可能不会频繁的查看论坛、QQ群等联系方式，如果你需要联系我们（BUG反馈，提供建议等等），可以发送邮件到 <b>main<code>@</code>vlabpro.com</b>。 便于我们及时得知，邮件会自动转发至我们主要成员的私人邮箱中。<br>
                         <br>
+                        <div class="text-right">
                         威盒团队<br>
                         敬上<br>
                         2019年4月<br>
+                        </div>
                         
                     </p>
                 </div>
