--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.8.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/dist/css/lightgallery.min.css">
 
-    <link href="assets/css/index.css" rel="stylesheet">
+    <link href="assets/css/index.css?v=1" rel="stylesheet">
 </head>
 
 <body class="bg-light">
@@ -294,7 +294,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/waypoints@4.0.1/lib/jquery.waypoints.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/dist/js/lightgallery.min.js"></script>
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/index.js?v=1"></script>
 </body>
 
 </html>
