--- a/www/index.html
+++ b/www/index.html
@@ -151,7 +151,7 @@
                                     <span class="flag">2014年7月19日</span>
                                 </div>
                                 <div class="desc">
-                                        经历了两年一共二十二个公测版本之后，威盒正式版终于发布了。 (宣传视频)
+                                        经历了两年一共二十二个公测版本之后，威盒正式版终于发布了。
                                 </div>
                             </div>
                         </li>
