bug fix & add lazy load

--- a/www/index.html
+++ b/www/index.html
@@ -226,15 +226,15 @@
                         <div class="row" id="images-logo">
                             <tr>
                                 <div class="col-md-4 images-logo" data-src="assets/img/display/logo/logo0.png" data-sub-html="早期团队图标">
-                                    <img src="assets/img/display/logo/logo0.png" class="img-thumbnail mx-auto d-block">
+                                    <img data-src="assets/img/display/logo/logo0.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 早期团队图标 </div>
                                 </div>
                                 <div class="col-md-4 images-logo" data-src="assets/img/display/logo/logo1.png" data-sub-html="威盒第一版图标">
-                                    <img src="assets/img/display/logo/logo1.png" class="img-thumbnail mx-auto d-block">
+                                    <img data-src="assets/img/display/logo/logo1.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒第一版图标 </div>
                                 </div>
                                 <div class="col-md-4 images-logo" data-src="assets/img/display/logo/logo2.png" data-sub-html="威盒现在的图标">
-                                    <img src="assets/img/display/logo/logo2.png" class="img-thumbnail mx-auto d-block">
+                                    <img data-src="assets/img/display/logo/logo2.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒现在的图标 </div>
                                 </div>
                             </tr>
@@ -248,31 +248,31 @@
                         <div class="row" id="images-client">
                             <tr>
                                 <div class="col-md-4 images-client" data-src="assets/img/display/client/0.png" data-sub-html="威盒 1.x">
-                                    <img src="assets/img/display/client/thumbnail/0.png" class="img-thumbnail mx-auto d-block">
+                                    <img data-src="assets/img/display/client/thumbnail/0.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒 1 </div>
                                 </div>
                                 <div class="col-md-4 images-client" data-src="assets/img/display/client/1.png" data-sub-html="威盒 2.x 内测">
-                                    <img src="assets/img/display/client/thumbnail/1.png" class="img-thumbnail mx-auto d-block">
+                                    <img data-src="assets/img/display/client/thumbnail/1.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒 2 内测 </div>
                                 </div>
                                 <div class="col-md-4 images-client" data-src="assets/img/display/client/2.png" data-sub-html="威盒 2.x 公测">
-                                    <img src="assets/img/display/client/thumbnail/2.png" class="img-thumbnail mx-auto d-block">
+                                    <img data-src="assets/img/display/client/thumbnail/2.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒 2 公测 </div>
                                 </div>
-                                <div class="col-md-4 images-client" data-src="assets/img/display/client/3.png" data-sub-html="威盒现在的图标">
-                                    <img src="assets/img/display/client/thumbnail/3.png" class="img-thumbnail mx-auto d-block">
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/3.png" data-sub-html="威盒 2.0">
+                                    <img data-src="assets/img/display/client/thumbnail/3.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒 2.0 </div>
                                 </div>
-                                <div class="col-md-4 images-client" data-src="assets/img/display/client/4.png" data-sub-html="威盒现在的图标">
-                                    <img src="assets/img/display/client/thumbnail/4.png" class="img-thumbnail mx-auto d-block">
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/4.png" data-sub-html="威盒 2.0 for macOS">
+                                    <img data-src="assets/img/display/client/thumbnail/4.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒 2.0 for macOS </div>
                                 </div>
-                                <div class="col-md-4 images-client" data-src="assets/img/display/client/5.png" data-sub-html="威盒现在的图标">
-                                    <img src="assets/img/display/client/thumbnail/5.png" class="img-thumbnail mx-auto d-block">
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/5.png" data-sub-html="威盒 当前界面">
+                                    <img data-src="assets/img/display/client/thumbnail/5.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒 当前界面 </div>
                                 </div>
-                                <div class="col-md-4 images-client" data-src="assets/img/display/client/6.png" data-sub-html="威盒现在的图标">
-                                    <img src="assets/img/display/client/thumbnail/6.png" class="img-thumbnail mx-auto d-block">
+                                <div class="col-md-4 images-client" data-src="assets/img/display/client/6.png" data-sub-html="威盒 for macOS 当前界面">
+                                    <img data-src="assets/img/display/client/thumbnail/6.png" class="img-thumbnail mx-auto d-block lazy">
                                     <div class="alert alert-light images-text"> 威盒 for macOS 当前界面 </div>
                                 </div>
                             </tr>
@@ -294,7 +294,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/waypoints@4.0.1/lib/jquery.waypoints.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.12/dist/js/lightgallery.min.js"></script>
-    <script src="assets/js/index.js?v=1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-lazy@1.7.10/jquery.lazy.min.js"></script>
+    <script src="assets/js/index.js?v=2"></script>
 </body>
 
 </html>
