--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="bg-light">
-    <div class="container">
+    <div class="container" id="announcement">
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="assets/img/vboxicon.png" alt="" width="72" height="72" />
             <h2>威盒暂停维护公告</h2>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="col-lg-10">
-                <div class="jumbotron" id="announcement">
+                <div class="jumbotron">
                     <p>
                         致威盒的开发者和用户：<br>
                         <br>
